@@ -20,32 +20,28 @@ repositories {
 
 java {
   toolchain {
-    languageVersion = JavaLanguageVersion.of(20)
+    languageVersion = JavaLanguageVersion.of(21)
   }
 }
 
 test {
   useJUnitPlatform()
-
-  jvmArgs(['--enable-preview'])
 }
 
 javadoc.options {
-  addStringOption('-release', '20')
+  addStringOption('-release', '21')
 }
 
 compileJava {
   options.compilerArgs << '-Xlint:unchecked'
   options.compilerArgs << '-Xlint:rawtypes'
-  options.compilerArgs << '--enable-preview'
-  options.release = 20
+  options.release = 21
 }
 
 compileTestJava {
   options.compilerArgs << '-Xlint:unchecked'
   options.compilerArgs << '-Xlint:rawtypes'
-  options.compilerArgs << '--enable-preview'
-  options.release = 20
+  options.release = 21
 }
 
 dependencies {
@@ -74,7 +70,6 @@ dependencies {
 
 application {
   mainClass = 'com.github.tonivade.todo.Application'
-  applicationDefaultJvmArgs << '--enable-preview'
 }
 
 task fatJar(type: Jar) {
@@ -91,7 +86,7 @@ task fatJar(type: Jar) {
 }
 
 task downloadGraalvm(type: Download) {
-  src "https://github.com/graalvm/graalvm-ce-dev-builds/releases/download/${graalvm_version}/graalvm-community-java20-linux-amd64-dev.tar.gz"
+  src "https://github.com/graalvm/graalvm-ce-dev-builds/releases/download/${graalvm_version}/graalvm-community-java21-linux-amd64-dev.tar.gz"
   dest new java.io.File(buildDir, "graalvm.tar.gz")
   onlyIfModified true
 }
@@ -102,14 +97,13 @@ task extractGraalvm(dependsOn: downloadGraalvm, type: Exec) {
 }
 
 nativeImage {
-  graalVmHome = "${buildDir}/graalvm-community-openjdk-20.0.1+9.1/"
+  graalVmHome = "${buildDir}/graalvm-community-openjdk-21+35.1/"
   mainClass = "com.github.tonivade.todo.Application"
   executableName = "todo-backend"
   arguments(
           '--verbose',
           '--report-unsupported-elements-at-runtime',
           '--no-fallback',
-          '--enable-preview',
           '--allow-incomplete-classpath',
           '--initialize-at-run-time=com.oracle.truffle.js.scriptengine.GraalJSEngineFactory',
           '-H:JNIConfigurationFiles=src/native-image/jni-config.json',
